--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 server.port=8090
 reading-file=GcmWebServices_Trace.txt
 writing-file=GeneratedLogs.txt
-spring.datasource.url=jdbc:postgresql://localhost:5432/test_db
-spring.datasource.username=admin
-spring.datasource.password=root
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/test_db
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.properties.hibernate.dialec=org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto=update
+hibernate.show_sql=true
+use_sql_comments=true
+hibernate.generate_statistics=true
